(fix) Se añadió overflow-auto a las tabs, principalmente para evitar que no se puedan alcanzar triggers.

--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,10 @@ html,
   @apply border border-neutral-300 dark:border-neutral-700 bg-neutral-100 dark:bg-neutral-800 rounded-2xl p-2
 }
 
+.tabs {
+  @apply overflow-auto
+}
+
 .tab-list {
   @apply relative flex items-center gap-0.5 *:flex *:items-center *:gap-1.5 *:min-w-max *:p-2 *:data-selected:font-[500]
 }
